--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
     background-color: grey;
     color: rgba(34, 34, 34, 0.932);
     font-family: 'Spectral SC', serif;
-    background-image: url(../images/image3.jpg);
+    background-image: url(..image3.jpg);
   
    
 }
